env/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: board-application
  sessionAffinity: None
  type: ClusterIP
